--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Projeto 1 Pedro Steinmuller</title>
 </head>
 <body>
-    
+    <header id="cabecalho">
+        <h1 id="titulo">Projeto 1 Lessons learned</h1>
+    </header>
 </body>
 </html>
