--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Projeto 1 Lessons learned</h1>
-    </header>
+    </header> 
+    <br> <br>
+    <img id="minha_foto" src="/Projeto 1/sd-024-a-project-lessons-learned/minha_foto.jpeg">
 </body>
 </html>
