correcao e implementacao da tag navdo requisito 2, resolucao do requisito 4 e remocao do parametro padding:0 no * do arquivo css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Projeto 1 Lessons learned</h1>
+        <nav>
+            <h1 id="titulo">Projeto 1 Lessons learned</h1>
+        </nav>
     </header> 
     <br> <br>
-    <img id="minha_foto" src="/Projeto 1/sd-024-a-project-lessons-learned/minha_foto.jpeg">
+    <main>
+        <img id="minha_foto" src="/Projeto 1/sd-024-a-project-lessons-learned/minha_foto.jpeg">
+        <ol id="licoes_aprendidas">
+            <li>Unix & Bash;</li>
+            <li>Git;</li>
+            <li>GitHub;</li>
+            <li>Internet;</li>
+            <li>HTML;</li>
+            <li>Estruturas de página;</li>
+            <li>CSS;</li>
+            <li>Seletores e posicionamento;</li>
+            <li>HTML Semântico;</li>
+            <li>Soft Skills.</li>
+        </ol>
+    </main>
 </body>
 </html>
