resolucao do requisito 5

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <li>HTML Semântico;</li>
             <li>Soft Skills.</li>
         </ol>
+        <br>
+        <ul id="licoes_a_aprender">
+            <li>Introdução à JavaScript e Lógica de Programação;</li>
+            <li>JavaScript: DOM, Eventos e Web Storage;</li>
+            <li>HTML e CSS: Forms, Flexbox e Responsivo;</li>
+            <li>Introdução à JavaScript ES6 e Testes Unitários;</li>
+            <li>Higher Order Functions do JavaScript ES6;</li>
+            <li>JavaScript e Testes Assíncronos;</li>
+            <li>Introdução à React;</li>
+            <li>Componentes com Estado, Eventos e Formulários com React;</li>
+            <li>Ciclo de Vida de Componentes e React Router;</li>
+            <li>Metodologias Ágeis.</li>
+        </ul>
     </main>
 </body>
 </html>
