resolucao do requisito 6

--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
             <li>Metodologias Ágeis.</li>
         </ul>
     </main>
+    <footer id="rodape">
+        Rodapé da página.
+    </footer>
 </body>
 </html>
