--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li>Ciclo de Vida de Componentes e React Router;</li>
             <li>Metodologias Ágeis.</li>
         </ul>
+        <a target="_blank"href="https://www.google.com.br/">Site do Google.</a>
     </main>
     <footer id="rodape">
         Rodapé da página.
