resolucao dos requisitos 8, 9, 10 e 11

--- a/index.html
+++ b/index.html
@@ -1,50 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Projeto 1 Pedro Steinmuller</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="cabecalho">
-        <nav>
-            <h1 id="titulo">Projeto 1 Lessons learned</h1>
-        </nav>
-    </header> 
-    <br> <br>
-    <main>
-        <img id="minha_foto" src="/Projeto 1/sd-024-a-project-lessons-learned/minha_foto.jpeg">
-        <ol id="licoes_aprendidas">
-            <li>Unix & Bash;</li>
-            <li>Git;</li>
-            <li>GitHub;</li>
-            <li>Internet;</li>
-            <li>HTML;</li>
-            <li>Estruturas de página;</li>
-            <li>CSS;</li>
-            <li>Seletores e posicionamento;</li>
-            <li>HTML Semântico;</li>
-            <li>Soft Skills.</li>
-        </ol>
-        <br>
-        <ul id="licoes_a_aprender">
-            <li>Introdução à JavaScript e Lógica de Programação;</li>
-            <li>JavaScript: DOM, Eventos e Web Storage;</li>
-            <li>HTML e CSS: Forms, Flexbox e Responsivo;</li>
-            <li>Introdução à JavaScript ES6 e Testes Unitários;</li>
-            <li>Higher Order Functions do JavaScript ES6;</li>
-            <li>JavaScript e Testes Assíncronos;</li>
-            <li>Introdução à React;</li>
-            <li>Componentes com Estado, Eventos e Formulários com React;</li>
-            <li>Ciclo de Vida de Componentes e React Router;</li>
-            <li>Metodologias Ágeis.</li>
-        </ul>
-        <a target="_blank"href="https://www.google.com.br/">Site do Google.</a>
-    </main>
-    <footer id="rodape">
-        Rodapé da página.
-    </footer>
-</body>
+      <nav>
+        <h1 id="titulo">Projeto 1 Lessons learned</h1>
+      </nav>
+    </header>
+    <img
+      id="minha_foto"
+      src="/Projeto 1/sd-024-a-project-lessons-learned/minha_foto.jpeg"
+      alt="Foto de Pedro Steinmuller"
+    />
+    <br />
+    <br />
+    <section class="listas">
+      <ol id="licoes_aprendidas">
+        <li>Unix & Bash;</li>
+        <li>Git;</li>
+        <li>GitHub;</li>
+        <li>Internet;</li>
+        <li>HTML;</li>
+        <li>Estruturas de página;</li>
+        <li>CSS;</li>
+        <li>Seletores e posicionamento;</li>
+        <li>HTML Semântico;</li>
+        <li>Soft Skills.</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>Introdução à JavaScript e Lógica de Programação;</li>
+        <li>JavaScript: DOM, Eventos e Web Storage;</li>
+        <li>HTML e CSS: Forms, Flexbox e Responsivo;</li>
+        <li>Introdução à JavaScript ES6 e Testes Unitários;</li>
+        <li>Higher Order Functions do JavaScript ES6;</li>
+        <li>JavaScript e Testes Assíncronos;</li>
+        <li>Introdução à React;</li>
+        <li>Componentes com Estado, Eventos e Formulários com React;</li>
+        <li>Ciclo de Vida de Componentes e React Router;</li>
+        <li>Metodologias Ágeis.</li>
+      </ul>
+    </section>
+    <br /><br />
+    <section>
+      <a href="https://www.google.com.br/"target="_blank">Clique aqui para ser redirecionado(a) para a página do Google em outra aba.</a>
+    </section>
+    <br />
+    <section>
+      <section class="article1">
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illo
+          minima voluptatibus nisi officiis labore quam reiciendis corporis
+          porro incidunt ex consequatur quae ut ea dolorum, aperiam doloribus
+          dicta magni. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Vero illo minima voluptatibus nisi officiis labore quam reiciendis
+          corporis porro incidunt ex consequatur quae ut ea dolorum, aperiam
+          doloribus dicta magni.
+        </article>
+      </section>
+      <section class="aside1">
+        <aside>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ipsam,
+          animi alias recusandae libero maxime at aspernatur adipisci culpa fuga
+          beatae illum nihil modi sint velit temporibus! Cupiditate, itaque
+          tempora!
+        </aside>
+      </section>
+    </section>
+    <footer id="rodape">Rodapé da página.</footer>
+  </body>
 </html>
