ajustando o spaces para 2, com o objetivo de eliminar boa parte dos erros de lint

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     </section>
     <br /><br />
     <section>
-      <a href="https://www.google.com.br/"target="_blank">Clique aqui para ser redirecionado(a) para a página do Google em outra aba.</a>
+      <a href="https://www.google.com.br/" target="_blank"
+        >Clique aqui para ser redirecionado(a) para a página do Google em outra
+        aba.</a
+      >
     </section>
     <br />
     <section>
