resolucao do requisito 12 bonus, automaticamente o requisito 13 foi finalizado junto

--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
         </aside>
       </section>
     </section>
+    <table class="table1" border="4">
+      <caption>Tabela 1</caption>
+      <tr>
+        <th>Coluna 1</th>
+        <th>Coluna 2</th>
+        <th>Coluna 3</th>
+      </tr>
+      <tr>
+        <td>Conteúdo 1</td>
+        <td>Conteúdo 2</td>
+        <td>Conteúdo 3</td>
+      </tr>
+      <tr>
+        <td>Conteúdo 4</td>
+        <td>Conteúdo 5</td>
+        <td>Conteúdo 6</td>
+      </tr>
+    </table>
     <footer id="rodape">Rodapé da página.</footer>
   </body>
 </html>
