resolucao do ultimo requisito bonus 15

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <br />
     <section>
-      <section class="article1">
+      <section class="lado-esquerdo">
         <article>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illo
           minima voluptatibus nisi officiis labore quam reiciendis corporis
@@ -66,7 +66,7 @@
           doloribus dicta magni.
         </article>
       </section>
-      <section class="aside1">
+      <section class="lado-direito">
         <aside>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ipsam,
           animi alias recusandae libero maxime at aspernatur adipisci culpa fuga
