formatacao do codigo html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       </section>
     </section>
     <table class="table1" border="4">
-      <caption>Tabela 1</caption>
+      <caption>
+        Tabela 1
+      </caption>
       <tr>
         <th>Coluna 1</th>
         <th>Coluna 2</th>
